# Micro-CDR

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CTestConfig.cmake  Makefile.am.in  QUALITY.md  README.md  README.rst  configure.ac  gtest.cmake
.github/workflows/: codeql-analysis.yml
ci/linux/: CMakeLists.txt
ci/windows/: CMakeLists.txt
cmake/: SuperBuild.cmake
cmake/dev/: check_configuration.cmake  gtest.cmake
cmake/packaging/: eProsimaPackaging.cmake
cmake/packaging/linux/: AutotoolsPackaging.cmake  LinuxPackaging.cmake  LinuxPackaging.cmake.in  autotools_generator.cmake  autotools_generator.cmake.in
cmake/packaging/windows/: EnvVarPage.nsh.in  EnvVarPage_one_arch.nsh.in  InstallRedistributables.nsh  NSIS.template.in  WindowsPackaging.cmake.in  microCdrConfig.cmake  nanoCdrConfig.cmake
examples/: basic.c  basic_dynamic.c  basic_static.c
examples/basic/: basic.c
examples/fragmentation/: fragmentation.c
examples/performance_cmp/: main.cpp
examples/performance_cmp/include/: Makefile.am.in
examples/performance_cmp/include/microcdr/: microBuffer.h  microcdr.h
examples/performance_cmp_versions/: build_and_run.sh  performance_test
examples/performance_cmp_versions/include/microcdr/: microCdr.h
include/: Makefile.am.in  nanoBuffer.h  nanoCdr.h
include/microcdr/: common.h  config.h  config.h.in  dll.h  eProsima_auto_link.h  microBuffer.h  microCdr.h  microcdr.h  microcdr_dll.h  serialization.h
include/microcdr/types/: array.h  basic.h  basics.h  sequence.h  string.h
include/nanocdr/: config.h  config.h.in  eProsima_auto_link.h  nanoBuffer.h  nanoCdr.h  nanocdr_dll.h
include/ucdr/: common.h  microcdr.h
include/ucdr/types/: array.h  basic.h  sequence.h  string.h
src/c/: CMakeLists.txt  Makefile.am.in  common.c  common_internal.h  common_internals.h  microCdr.c  microcdr.c  nanoCdr.c  serialization.c  temp.c
src/c/types/: array.c  array_internals.h  basic.c  basic_internals.h  basics.c  sequence.c  sequence_internals.h  string.c
src/java/com/eprosima/microcdr/idl/context/: Context.java
src/java/com/eprosima/microcdr/idl/generator/: TypesGenerator.java
src/java/com/eprosima/microcdr/idl/templates/: MicroCdrCommon.stg  TypesHeader.stg  TypesSource.stg
test/: Alignment.cpp  AllTest.cpp  ArraySerialization.cpp  BasicSerialization.cpp  BufferError.cpp  CMakeLists.txt  Common.cpp  CommonFunctions.cpp  DynamicBuffer.cpp  DynamicTest.cpp  FullBuffer.cpp  FullBuffer.hpp  FullBufferCallback.cpp  SequenceOverflow.cpp  SequenceSerialization.cpp  SerializationDeserialization.cpp  SimpleTest.c  StaticTest.cpp  StringSerialization.cpp  TypeSerialization.cpp  evaluator.c
test/case/: CMakeLists.txt
test/case/packaging/: Packaging.cmake
test/cross_serialization/: FastCDRSerialization.hpp
test/endianness/: ArrayEndianness.cpp  BasicEndianness.cpp  SequenceEndianness.cpp
test/fragmentation/: ArrayFragmentation.cpp  BasicFragmentation.cpp
test/serialization/: ArraySerialization.cpp  ArraySerialization.hpp  BasicSerialization.cpp  BasicSerialization.hpp  SequenceSerialization.cpp  SequenceSerialization.hpp  StringSerialization.cpp  StringSerialization.hpp
